sorted: added del route & swagger meta doc
next:
- figure out autogen http clients from swagger file that exists now
- refactor/restructure the code a bit
