# intermediate-go-microservices/gorilla_restfull_microservice/swagger.yaml
@@ -14,7 +14,9 @@ definitions:
                 type: string
                 x-go-name: Glaze
             id:
+                description: the id of the user
                 format: int64
+                minimum: 1
                 type: integer
                 x-go-name: ID
             name:
@@ -24,6 +26,8 @@ definitions:
                 format: float
                 type: number
                 x-go-name: Price
+        required:
+            - id
         type: object
         x-go-package: github.com/Jasmeet-1998/Microservices/intermediate-go-microservices/gorilla_restfull_microservice/data
 info:
@@ -40,9 +44,28 @@ paths:
                     $ref: '#/responses/productsResponse'
             tags:
                 - products
+    /products/{id}:
+        delete:
+            description: Returns a list of products
+            operationId: deleteProduct
+            parameters:
+                - description: The id of the product to be deleted from db
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "201":
+                    $ref: '#/responses/noContent'
+            tags:
+                - products
 produces:
     - application/json
 responses:
+    noContent:
+        description: ""
     productsResponse:
         description: A list of products returns in the response
         schema:
